samples/_failures_safe/1761284296_68f8b1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cb229952.c: In function ‘main’:
./samples/SAFE/__tmp_cb229952.c:156:42: error: ‘input’ undeclared (first use in this function); did you mean ‘int’?
  156 |     printf("Original size: %zu bytes\n", input
      |                                          ^~~~~
      |                                          int
./samples/SAFE/__tmp_cb229952.c:156:42: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_cb229952.c:156:47: error: expected ‘)’ at end of input
  156 |     printf("Original size: %zu bytes\n", input
      |           ~                                   ^
      |                                               )
./samples/SAFE/__tmp_cb229952.c:156:5: error: expected declaration or statement at end of input
  156 |     printf("Original size: %zu bytes\n", input
      |     ^~~~~~
